test/function/error/parameter_redeclaration.c
float f(float a){
    float a;
    return a;
}